<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_text_name_lesson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_naam"
            android:textColor="#262626"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_text_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.santalu.maskedittext.MaskEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_datum"
            android:inputType="date"
            android:textColor="#262626"
            android:textColorHint="#e60000"
            app:met_mask="##-##-####">
        </com.santalu.maskedittext.MaskEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_text_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.santalu.maskedittext.MaskEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_tijd"
            android:inputType="time"
            android:textColor="#262626"
            app:met_mask="##-##">
        </com.santalu.maskedittext.MaskEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_text_name_teacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_docent"
            android:textColor="#262626"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_toevoegen"
        android:background="#262626"
        android:textColor="#ffffff"
        android:layout_margin="16dp"
        />

</LinearLayout>